--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,15 @@ Thumbs.db
 # Temporary files
 *.tmp
 *.temp
+# Package files
+*.tar.gz
+backend/backend.tar.gz
+
+# Virtual environments
+venv/
+.venv/
+.venv39/
+.env/
+__pycache__/
+*.pyc
+*.pyo
