--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.5.24",
+    "@fortawesome/fontawesome-free": "^7.1.0",
     "axios": "^1.6.0",
     "konva": "^9.3.1",
+    "vue": "^3.5.24",
     "vue-konva": "^3.0.2",
     "vue-router": "^4.2.5"
   },
